updates for some cosmetic stuff and improved tests, uncovered bugs, and fixed those bugs

--- a/app/styles/card.scss
+++ b/app/styles/card.scss
@@ -1,6 +1,12 @@
 .card-container {
     position: relative;
     list-style: none;
+        &:hover {
+            transition-timing-function: ease-out;
+            box-shadow: 5px 5px 12px 3px rgba(0, 0, 0, 0.25);
+            position: relative;
+            z-index: 99;
+        }
     .card {
         overflow: hidden;
         padding-bottom: 20px;
@@ -9,6 +15,7 @@
         transition: 0.2s ease-out;
         transition-property: box-shadow, height;
         background: #fff;
+        cursor: pointer;
         > .row {
             margin: 0;
         }
@@ -18,7 +25,7 @@
                 margin-bottom: 0;
             }
             h3 {
-                margin:5px 0;
+                margin: 5px 0;
             }
         }
         &.large {
